Code cleanuo, created Card class

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           class="form-input" placeholder="Name"
           ><br />
 
-        <label for="cardNo" class="form-label">Card Number</label><br />
+        <label for="number" class="form-label">Card Number</label><br />
         <div id="card-input">
           <img id="issuer-logo" src="" title=""></img>
-          <input type="text" id="cardNo" value=""
+          <input type="text" id="number" value=""
             pattern="[\d\s]+"
             maxlength="19"
             class="form-input" placeholder="57XX-XX32-123"
